--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       <div id="slide1" class="carousel-item relative w-full md:p-[104px] box-border bg-[#f7f0f0] justify-center ">
         <div class="flex flex-wrap md:flex-nowrap  gap-3 justify-center h-[400px] w-full">
         <div class="md:w-[475px]">
-          <h1 class="md:text-[40px] text-[30px] font-bold md:leading-[75px] md:ml-0 ml-5">Keep Your Ride Safe At
+          <h1 class="md:text-[40px] text-[30px] font-bold md:leading-[75px] md:ml-0 ml-4">Keep Your Ride Safe At
             Every Time</h1>
-          <p class="text-base mb-5 md:ml-0 ml-5">Amet minim mollit non deserunt ullamco est sit  velit
+          <p class="text-base mb-5 md:ml-0 ml-3">Amet minim mollit non deserunt ullamco est sit  velit
                                     aliqua dolor do amet sint. Velit officia consequatduis enim  
                                     mollit. Exercitation veniam consequat sunt 
                                     nostrud amet.</p>
@@ -65,11 +65,11 @@
         <div class="flex flex-wrap md:flex-nowrap gap-3 justify-center ">
         <div class="md:w-[475px]">
           <h1 class="md:text-[40px] text-[30px] font-bold md:leading-[75px] md:ml-0 ml-5">Ride-on R15 V4 with Smile</h1>
-          <p class="text-base mb-5 md:ml-0 ml-5">Amet minim mollit non deserunt ullamco est sit  velit
+          <p class="text-base mb-5 md:ml-0 ml-3">Amet minim mollit non deserunt ullamco est sit  velit
                                     aliqua dolor do amet sint. Velit officia consequatduis enim  
                                     mollit. Exercitation veniam consequat sunt 
                                     nostrud amet.</p>
-          <button class="btn text-white bg-orange-600 font-bold md:ml-0 ml-5">Purchase</button>
+          <button class="btn text-white bg-orange-600 font-bold md:ml-0 ml-4">Purchase</button>
         </div>
         <img src="./images/33721726_bike016_elscar_rtr_5147 1.png" class="md:w-[400px] w-full" alt="">
       </div>
@@ -81,8 +81,8 @@
       <div id="slide3" class="carousel-item relative w-full md:p-[104px] box-border bg-[#f7f0f0] justify-center">
         <div class="flex flex-wrap md:flex-nowrap gap-3 justify-center ">
         <div class="md:w-[475px]">
-          <h1 class="md:text-[40px] text-[30px] font-bold leading-[75px] md:ml-0 ml-5">Honda CBR 300R</h1>
-          <p class="text-base mb-5 md:ml-0 ml-5">Amet minim mollit non deserunt ullamco est sit  velit
+          <h1 class="md:text-[40px] text-[30px] font-bold leading-[75px] md:ml-0 ml-4">Honda CBR 300R</h1>
+          <p class="text-base mb-5 md:ml-0 ml-3">Amet minim mollit non deserunt ullamco est sit  velit
                                     aliqua dolor do amet sint. Velit officia consequatduis enim  
                                     mollit. Exercitation veniam consequat sunt 
                                     nostrud amet.</p>
@@ -108,9 +108,9 @@
 
    
     <div class="flex flex-wrap md:flex-nowrap gap-24 justify-center ">
-      <img class="w-[288px] h-[243px] " src="./images/blue.avif" alt="">
-      <img class="w-[288px] h-[243px]" src="./images/vintage-motorcycle-white-background_612827-69728.avif" alt="">
-      <img class="w-[288px] h-[243px]" src="./images/red-motorcycle-with-black-seat-red-frame_1315971-613.jpg" alt="">
+      <img class="md:w-[288px] w-full h-[243px] " src="./images/blue.avif" alt="">
+      <img class="md:w-[288px] w-full h-[243px]" src="./images/vintage-motorcycle-white-background_612827-69728.avif" alt="">
+      <img class="md:w-[288px] w-full h-[243px]" src="./images/red-motorcycle-with-black-seat-red-frame_1315971-613.jpg" alt="">
      </div>
     </div>
    </section>
