--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
   </header>
   <!-- hero area -->
-  <section class="md:w-[1440px]  md:h-[698px] ">
-    <div class="carousel w-full">
+  <section class="md:w-[1440px]  md:h-[698px] md:mx-auto ">
+    <div class="carousel w-full ">
       <div id="slide1" class="carousel-item relative w-full md:p-[104px] box-border bg-[#f7f0f0] justify-center ">
         <div class="flex flex-wrap md:flex-nowrap  gap-3 justify-center h-[400px] w-full">
         <div class="md:w-[475px]">
@@ -286,7 +286,7 @@
 
       </section>
       <!-- footer -->
-      <section class="md:h-[280px] h-[420px] md:w-[1440px] bg-black">
+      <section class="md:h-[280px] h-[420px] md:w-[1440px] mx-auto bg-black">
         <div class="flex flex-wrap md:flex-nowrap text-white md:justify-around md:ml-0 ml-16 ">
           <div class="mt-14">
             <div class="flex flex-wrap md:flex-nowrap text-white gap-5">
